samples/_failures_safe/1761414249_7a8219_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a0bf1609.c: In function ‘main’:
./samples/SAFE/__tmp_a0bf1609.c:168:11: error: expected ‘;’ at end of input
  168 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_a0bf1609.c:168:5: error: expected declaration or statement at end of input
  168 |     printf
      |     ^~~~~~
